--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-//@import '../../bourbon/bourbon';
+@import '../../bourbon/bourbon';
 @import 'normalize';
 
 @import 'mixins',
@@ -12,6 +12,7 @@
 'blocks/footer-socnet',
 'blocks/gallery',
 'blocks/hit',
+'blocks/intro',
 'blocks/logo',
 'blocks/main-nav',
 'blocks/page',
