--- a/sass/blocks/download.scss
+++ b/sass/blocks/download.scss
@@ -13,17 +13,17 @@
     width: 350px;
     min-height: 533px;
     margin-top: -533px;
-    padding-left: 10px;
-    background-color: $gray;
-    outline: 1px solid red;
+    padding-left: 20px;
+    padding-right: 350px;
+    background-color: transparent;
   }
   @media ($desktop-widths) {
     width: 600px;
     height: 853px;
     margin-top: -853px;
     padding-left: 10px;
-    background-color: $gray;
-    outline: 1px solid red;
+    padding-right: 600px;
+    background-color: transparent;
   }
 }
 
@@ -121,8 +121,8 @@
   margin-top: -28px;
   @media ($tablet-widths) {
     font-size: 18px;
-    margin-left: 30px;
-    margin-right: 20px;
+    margin-left: 17px;
+    margin-right: 10px;
     margin-top: -15px;
   }
   @media ($desktop-widths) {
