--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -7,6 +7,9 @@
     min-height: 533px;
     margin-top: -533px;
     background-color: $gray;
+    background-image: url(../img/iphone-hand-tablet@1x.png), url(../img/bg-back-tablet@1x.jpg);
+    background-position: 0 176px, -190px 0;
+    background-repeat: no-repeat, no-repeat;
     outline: 1px solid red;
   }
   @media ($desktop-widths) {
