--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -9,7 +9,20 @@
   }
   @media ($desktop-widths) {
     width: 1200px;
-    top: 416px;
+    top: 415px;
+  }
+}
+
+.reviews::after {
+  @media ($desktop-widths) {
+    content: '';
+    display: block;
+    width: 79px;
+    height: 63px;
+    position: relative;
+    top: -625px;
+    left: 562px;
+    background: url('data:image/svg+xml;utf-8,<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="78.672px" height="63.789px" viewBox="0 0 78.672 63.789" enable-background="new 0 0 78.672 63.789" xml:space="preserve" fill="#efefef"><g><path d="M34.967,7.063L30.713,0C28.272,1.495,0,12.207,0,39.617c0,7.231,0.336,24.172,18.9,24.172 c11.187,0,13.94-10.279,13.94-13.584c0-21.977-21.382-14.177-21.382-14.177C11.458,17.957,31.263,9.184,34.967,7.063z"/></g><g><path d="M78.672,7.063L74.418,0c-2.44,1.495-30.713,12.207-30.713,39.617c0,7.231,0.337,24.172,18.9,24.172 c11.187,0,13.939-10.279,13.939-13.584c0-21.977-21.381-14.177-21.381-14.177C55.165,17.957,74.969,9.184,78.672,7.063z"/></g></svg>') no-repeat center;
   }
 }
 
@@ -32,6 +45,8 @@ input[type=radio] {
   margin: 0 auto;
   @media ($tablet-widths) {
     width: 700px;
+  }
+  @media ($desktop-widths) {
   }
 }
 
@@ -60,7 +75,8 @@ input[type=radio] {
     line-height: 30px;
   }
   @media ($desktop-widths) {
-    margin-top: 293px;
+    margin-top: 273px;
+    padding-top: 0;
     font-size: 24px;
   }
 }
@@ -103,6 +119,32 @@ input[type=radio] {
   @media ($desktop-widths) {
     margin-top: -370px;
     padding-top: 200px;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+
+.reviews__review-text::before {
+  @media ($mobile-widths-only) {
+    content: "«";
+  }
+  @media ($tablet-widths) {
+    content: "«";
+  }
+  @media ($desktop-widths) {
+    display: none;
+  }
+}
+
+.reviews__review-text::after {
+  @media ($mobile-widths-only) {
+    content: "»";
+  }
+  @media ($tablet-widths) {
+    content: "»";
+  }
+  @media ($desktop-widths) {
+    display: none;
   }
 }
 
@@ -174,7 +216,7 @@ input[type=radio] {
     border-width: 27px 350px;
   }
   @media ($desktop-widths) {
-    top: -79px;
+    top: -142px;
     border-width: 40px 600px;
   }
 }
@@ -200,11 +242,46 @@ input[type=radio] {
     float: left;
     width: 348px;
     min-height: 400px;
-    outline: 1px solid red;
+    background: url('data:image/svg+xml;utf-8, <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="238px" height="275px" viewBox="0 0 298 345.097" enable-background="new 0 0 298 345.097" xml:space="preserve" fill="#dedede"><path d="M264.568,102.055l5.355-5.355c7.717-7.717,9.124-18.938,3.126-24.935c-5.997-5.997-17.217-4.59-24.934,3.127l-5.386,5.385 C221.768,63.292,196.11,51.875,168,48.297v-9.583h7.658c10.914,0,19.843-8.711,19.843-19.357S186.573,0,175.659,0h-53.317  c-10.913,0-19.842,8.711-19.842,19.357s8.929,19.357,19.842,19.357H130v9.583C56.681,57.629,0,120.244,0,196.097  c0,82.291,66.709,149,149,149c82.29,0,149-66.709,149-149C298,160.434,285.465,127.703,264.568,102.055z M149,306.264 c-60.844,0-110.167-49.323-110.167-110.167S88.156,85.93,149,85.93c60.843,0,110.167,49.323,110.167,110.167  S209.843,306.264,149,306.264z"/></svg>') no-repeat;
+    background-position: 40px 60px;
   }
   @media ($desktop-widths) {
-    width: 480px;
+    width: 406px;
     min-height: 448px;
+    margin-top: -20px;
+    margin-left: 89px;
+    background: url('data:image/svg+xml;utf-8, <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="298px" height="346px" viewBox="0 0 298 345.097" enable-background="new 0 0 298 345.097" xml:space="preserve" fill="#dedede"><path d="M264.568,102.055l5.355-5.355c7.717-7.717,9.124-18.938,3.126-24.935c-5.997-5.997-17.217-4.59-24.934,3.127l-5.386,5.385 C221.768,63.292,196.11,51.875,168,48.297v-9.583h7.658c10.914,0,19.843-8.711,19.843-19.357S186.573,0,175.659,0h-53.317  c-10.913,0-19.842,8.711-19.842,19.357s8.929,19.357,19.842,19.357H130v9.583C56.681,57.629,0,120.244,0,196.097  c0,82.291,66.709,149,149,149c82.29,0,149-66.709,149-149C298,160.434,285.465,127.703,264.568,102.055z M149,306.264 c-60.844,0-110.167-49.323-110.167-110.167S88.156,85.93,149,85.93c60.843,0,110.167,49.323,110.167,110.167  S209.843,306.264,149,306.264z"/></svg>') no-repeat;
+    background-position: 40px 60px;
+  }
+}
+
+.reviews__proof--left::after {
+  @media ($tablet-widths) {
+    position: relative;
+    top: 116px;
+    left: 60px;
+    display: block;
+    content: "24";
+    width: 176px;
+    height: 169px;
+    padding-top: 7px;
+    border: 12px solid $pink;
+    border-radius: 50%;
+    font-family: "OpenSans bold", sans-serif;
+    font-size: 96px;
+    line-height: 150px;
+    text-align: center;
+    color: $pink;
+  }
+  @media ($desktop-widths) {
+    width: 220px;
+    height: 210px;
+    top: 130px;
+    left: 63px;
+    padding-top: 10px;
+    border: 16px solid $pink;
+    font-size: 120px;
+    line-height: 187px;
   }
 }
 
@@ -214,10 +291,9 @@ input[type=radio] {
     float: left;
     width: 352px;
     min-height: 400px;
-    outline: 1px solid red;
   }
   @media ($desktop-widths) {
-    width: 720px;
+    width: 600px;
     min-height: 448px;
   }
 }
@@ -231,6 +307,9 @@ input[type=radio] {
     font-size: 30px;
     line-height: 36px;
     color: $black;
+  }
+  @media ($desktop-widths) {
+    margin-top: 132px;
   }
 }
 
@@ -246,6 +325,9 @@ input[type=radio] {
   }
   @media ($desktop-widths) {
     font-size: 18px;
+    margin-top: -9px;
+    margin-right: 70px;
+    line-height: 30px;
   }
 }
 
@@ -261,5 +343,45 @@ input[type=radio] {
   }
   @media ($desktop-widths) {
     font-size: 18px;
+    margin-top: 42px;
   }
 }
+
+.reviews__before {
+  @media ($mobile-widths-only) {
+    display: none;
+  }
+  @media ($tablet-widths) {
+    display: none;
+  }
+  @media ($desktop-widths) {
+    display: block;
+    width: 22px;
+    height: 42px;
+    position: relative;
+    left: 130px;
+    top: 217px;
+    background: url('data:image/svg+xml;utf-8,<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve" fill="#bec2c7"><path d="M2.045,20.859L21.458,1.446c0.331-0.331,0.331-0.867,0-1.198c-0.33-0.331-0.867-0.331-1.197,0L0.248,20.261 c-0.331,0.33-0.331,0.867,0,1.197l20.013,20.013c0.164,0.165,0.382,0.248,0.599,0.248s0.434-0.083,0.599-0.248 c0.331-0.331,0.331-0.867,0-1.198L2.045,20.859z"/></svg>') no-repeat center;
+    cursor: pointer;
+  }
+}
+
+.reviews__after {
+  @media ($mobile-widths-only) {
+    display: none;
+  }
+  @media ($tablet-widths) {
+    display: none;
+  }
+  @media ($desktop-widths) {
+    display: block;
+    width: 22px;
+    height: 42px;
+    position: relative;
+    left: 1050px;
+    top: -408px;
+    background: url('data:image/svg+xml;utf-8,<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve" fill="#bec2c7"><path d="M19.661,20.859L0.248,1.446c-0.331-0.331-0.331-0.867,0-1.198c0.33-0.331,0.867-0.331,1.197,0l20.013,20.012 c0.33,0.33,0.33,0.867,0,1.197L1.445,41.471c-0.164,0.165-0.382,0.248-0.599,0.248s-0.434-0.083-0.599-0.248 c-0.331-0.331-0.331-0.867,0-1.198L19.661,20.859z"/></svg>') no-repeat center;
+    cursor: pointer;
+  }
+}
+
