Pre-final commit

--- a/sass/blocks/logo.scss
+++ b/sass/blocks/logo.scss
@@ -33,6 +33,17 @@
   .logo-pink-white-desktop {
     display: none;
   }
+  .logo-pink-white-mobile {
+    display: block;
+    fill: $white;
+    &:hover {
+      fill: $pink;
+    }
+    &:active {
+      fill: $white;
+      opacity: 0.3;
+    }
+  }
 }
 
 @media ($tablet-widths) {
@@ -42,6 +53,14 @@
   }
   .logo-pink-white-tablet {
     display: block;
+    fill: $white;
+    &:hover {
+      fill: $pink;
+    }
+    &:active {
+      fill: $white;
+      opacity: 0.3;
+    }
   }
 }
 
@@ -52,5 +71,13 @@
   }
   .logo-pink-white-desktop {
     display: block;
+    fill: $white;
+    &:hover {
+      fill: $pink;
+    }
+    &:active {
+      fill: $white;
+      opacity: 0.3;
+    }
   }
 }
