--- a/sass/blocks/promo-image.scss
+++ b/sass/blocks/promo-image.scss
@@ -5,6 +5,10 @@
     background-repeat: no-repeat;
     background-position: 83px 15px;
     z-index: 10;
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url(../img/iphone-screen-mobile@2x.png);
+      background-size: 157px auto;
+    }
   }
   @media ($tablet-widths) {
     display: none;
